--- a/polls/static/polls/product_d.scss
+++ b/polls/static/polls/product_d.scss
@@ -576,7 +576,7 @@ hr {
 
 .apps {
   height: 300px;
-  background: url('/images/countries.png');
+  background: url('/static/polls/images/countries.png');
   background-repeat: no-repeat;
   background-size: 5%;
 }
