--- a/polls/static/polls/partials/_why_amerlight.scss
+++ b/polls/static/polls/partials/_why_amerlight.scss
@@ -21,7 +21,7 @@
 
   .why_amerlight_c {
     display: inline-block;
-    padding: 50px 20px 0 0;
+    padding: 50px 20px 20px 20px;
     @media (min-width: $laptop_s) {
       margin-left: 50px;
     }
@@ -30,10 +30,13 @@
       max-width: 300px;
       vertical-align: top;
       text-align: left;
-      min-height: 200px;
+      min-height: 50px;
       display: inline-block;
-      padding: 55px;
+      padding: 20px 20px 20px 55px;
       position: relative;
+      margin: 10px;
+      border-radius: 5px;
+      box-shadow: 5px 5px 20px 5px rgba(0,0,0,.2);
       @media (max-width: $mobile_m) {
         padding-right: 20px;
       }
@@ -43,8 +46,7 @@
       }
 
       .text-reason {
-        display: inline;
-
+        padding-left: 20px;
         p {
           display: inline;
           max-width: 100px;
@@ -57,12 +59,11 @@
         display: inline;
         max-width: 35px;
         vertical-align: top;
-        margin-top: 25px;
         margin-left: -19px;
         padding: 5px;
         position: absolute;
         top: 20px;
-        left: 20px;
+        left: 40px;
       }
     }
   }
